@@ -1,6 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.354 2008-11-21 18:26:40 guru Exp $
+	$Id: ChangeLog,v 1.355 2008-11-28 23:29:11 guru Exp $
 -----------------------------------------------------------------------------------------
+2008-11-28	pwessel
+	* gmt_init.c:		Now, -R may take the name of an existing grid file. Then,
+				the grid domain is used to set -R as well as the grid
+				increment for those program that has such an option.
 2008-11-21	pwessel
 	* spotter/backtracker.c:	The -W option always assumed the reverse rotation
 				(from hotspot to seamount).  Now obeys the -D option.
